--- a/src/pages/Profile/ProfileEdit/ProfileEdit.module.scss
+++ b/src/pages/Profile/ProfileEdit/ProfileEdit.module.scss
@@ -18,8 +18,13 @@
 }
 
 @media only screen and (max-width: 768px) {
-  form {
-    width: 100%;
-    float: left;
+  .section {
+    margin-left: 0;
+
+    form {
+      width: 100%;
+      float: left;
+    }
   }
 }
+
